# devops-python-exercises

./: .gitignore  README.md  pandas_analise.py  pyproject.toml  python.py
.github/workflows/: dispatch.yaml
