[tool.poetry]
name = "exercicios"
version = "0.1.0"
description = "Exercício de Análise de dados de logs. Prof. Leonardo Afonso Amorim"
authors = ["Fabricio Nogueira <nogsantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
